# Instil

./: CMakeLists.txt  LICENSE  README.md
include/Instil/: Builder.h  Container.h  IndicesBuilder.h  Scope.h  TypeInfo.h  Unmangle.h
include/Instil/Strategies/: NamedScopeStrategy.h  SingletonStrategy.h  TransientStrategy.h
src/: CMakeLists.txt
test/: CMakeLists.txt  CMakeLists.txt.in  ContainerMaps.cpp  ContainerMixed.cpp  ContainerMixedPartTwo.cpp  ContainerMultipleRegistration.cpp  ContainerNamedScope.cpp  ContainerSingleton.cpp  ContainerTemplated.cpp  ContainerTransient.cpp  ContainerVectors.cpp
test/TestTypes/: ITestOne.h  ITestTwo.h  ITestTwoAlternate.h  Simple.cpp  Simple.h  SimpleAlternate.cpp  SimpleAlternate.h  Templated.h  TestOne.cpp  TestOne.h  TestOneAlternate.cpp  TestOneAlternate.h  TestTwo.cpp  TestTwo.h  TestTwoAlternate.cpp  TestTwoAlternate.h  WrapMultiple.cpp  WrapMultiple.h  WrapMultipleAsMap.cpp  WrapMultipleAsMap.h  WrapSingle.cpp  WrapSingle.h
test/TestTypes/Interfaces/: ISimple.h  ISimple2.h  ITemplated.h  IWrapMultiple.h  IWrapMultipleAsMap.h  IWrapSingle.h
